Debugging import code

--- a/import_testing.ipynb
+++ b/import_testing.ipynb
@@ -24,37 +24,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "prep_telco_data() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-4006a92b7176>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0macquire\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_telco_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcached\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprepare\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprep_telco_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: prep_telco_data() takes 0 positional arguments but 1 was given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = acquire.get_telco_data(cached = True)\n",
+    "# Cleaned Data for Exploration\n",
+    "df = acquire.get_telco_data(cached = False)\n",
     "train, validate, test = prepare.prep_telco_data(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>senior_citizen</th>\n",
+       "      <th>partner</th>\n",
+       "      <th>dependents</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>phone_service</th>\n",
+       "      <th>paperless_billing</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>churn</th>\n",
+       "      <th>contract_type_id.1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>yes_streaming_movies</th>\n",
+       "      <th>month_to_month_contract</th>\n",
+       "      <th>one_year_contract</th>\n",
+       "      <th>two_year_contract</th>\n",
+       "      <th>dsl</th>\n",
+       "      <th>fiber_optic</th>\n",
+       "      <th>auto_bank_transfer</th>\n",
+       "      <th>auto_credit_card</th>\n",
+       "      <th>e_check</th>\n",
+       "      <th>mail_check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5670</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.35</td>\n",
+       "      <td>122.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4152</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89.25</td>\n",
+       "      <td>487.05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4890</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>84.40</td>\n",
+       "      <td>4484.05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2391</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64.75</td>\n",
+       "      <td>4804.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2896</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76.55</td>\n",
+       "      <td>2065.40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4758</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>104.05</td>\n",
+       "      <td>6890.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29.45</td>\n",
+       "      <td>1459.35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2622</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74.65</td>\n",
+       "      <td>544.55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3812</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.15</td>\n",
+       "      <td>6411.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6867</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.10</td>\n",
+       "      <td>486.05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3943 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      senior_citizen  partner  dependents  tenure  phone_service  \\\n",
+       "5670               0        0           1       5              1   \n",
+       "4152               0        0           0       6              1   \n",
+       "4890               0        0           0      54              1   \n",
+       "2391               0        1           0      72              1   \n",
+       "2896               0        1           0      28              1   \n",
+       "...              ...      ...         ...     ...            ...   \n",
+       "4758               0        1           0      66              1   \n",
+       "381                1        1           0      51              0   \n",
+       "2622               0        0           0       7              1   \n",
+       "3812               0        1           0      60              1   \n",
+       "6867               0        1           1      25              1   \n",
+       "\n",
+       "      paperless_billing  monthly_charges  total_charges  churn  \\\n",
+       "5670                  0            20.35         122.00      0   \n",
+       "4152                  1            89.25         487.05      0   \n",
+       "4890                  0            84.40        4484.05      0   \n",
+       "2391                  0            64.75        4804.75      0   \n",
+       "2896                  0            76.55        2065.40      0   \n",
+       "...                 ...              ...            ...    ...   \n",
+       "4758                  1           104.05        6890.00      1   \n",
+       "381                   1            29.45        1459.35      0   \n",
+       "2622                  0            74.65         544.55      1   \n",
+       "3812                  1           106.15        6411.25      0   \n",
+       "6867                  0            20.10         486.05      0   \n",
+       "\n",
+       "      contract_type_id.1  ...  yes_streaming_movies  month_to_month_contract  \\\n",
+       "5670                   1  ...                     0                        1   \n",
+       "4152                   1  ...                     1                        1   \n",
+       "4890                   2  ...                     0                        0   \n",
+       "2391                   3  ...                     0                        0   \n",
+       "2896                   1  ...                     0                        1   \n",
+       "...                  ...  ...                   ...                      ...   \n",
+       "4758                   2  ...                     1                        0   \n",
+       "381                    1  ...                     0                        1   \n",
+       "2622                   1  ...                     0                        1   \n",
+       "3812                   1  ...                     1                        1   \n",
+       "6867                   3  ...                     0                        0   \n",
+       "\n",
+       "      one_year_contract  two_year_contract  dsl  fiber_optic  \\\n",
+       "5670                  0                  0    0            0   \n",
+       "4152                  0                  0    0            1   \n",
+       "4890                  1                  0    0            1   \n",
+       "2391                  0                  1    1            0   \n",
+       "2896                  0                  0    0            1   \n",
+       "...                 ...                ...  ...          ...   \n",
+       "4758                  1                  0    0            1   \n",
+       "381                   0                  0    1            0   \n",
+       "2622                  0                  0    0            1   \n",
+       "3812                  0                  0    0            1   \n",
+       "6867                  0                  1    0            0   \n",
+       "\n",
+       "      auto_bank_transfer  auto_credit_card  e_check  mail_check  \n",
+       "5670                   0                 1        0           0  \n",
+       "4152                   0                 0        1           0  \n",
+       "4890                   0                 0        1           0  \n",
+       "2391                   1                 0        0           0  \n",
+       "2896                   1                 0        0           0  \n",
+       "...                  ...               ...      ...         ...  \n",
+       "4758                   0                 0        1           0  \n",
+       "381                    0                 1        0           0  \n",
+       "2622                   0                 0        0           1  \n",
+       "3812                   0                 0        1           0  \n",
+       "6867                   0                 0        0           1  \n",
+       "\n",
+       "[3943 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train"
+   ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "churn_rate = train.churn.mean()\n",
+    "print(chrun_rate)"
+   ]
   },
   {
    "cell_type": "code",
