--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -334,10 +334,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>model3</th>\n",
+       "      <th>model4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4995</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4996</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4997</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4998</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4999</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     actual model1 model2 model3 model4\n",
+       "0       cat    cat    dog    cat    dog\n",
+       "1       dog    dog    cat    cat    dog\n",
+       "2       dog    cat    cat    cat    dog\n",
+       "3       dog    dog    dog    cat    dog\n",
+       "4       cat    cat    cat    dog    dog\n",
+       "...     ...    ...    ...    ...    ...\n",
+       "4995    dog    dog    dog    dog    dog\n",
+       "4996    dog    dog    cat    cat    dog\n",
+       "4997    dog    cat    cat    dog    dog\n",
+       "4998    cat    cat    cat    cat    dog\n",
+       "4999    dog    dog    dog    dog    dog\n",
+       "\n",
+       "[5000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('gives_you_paws.csv')\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
